# doc-hub

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  NOTICE  PIPELINE.md  PLAN.md  README.md  ROADMAP.md  VISION.md  deny.toml  docker-compose.dev.yml  rustfmt.toml
.docker/: README.md
.github/workflows/: ci.yml  hub-overview.yml  pages.yml  release.yml
crates/dochub-ai/: Cargo.toml
crates/dochub-ai/src/: agent.rs  anthropic.rs  chunk.rs  config.rs  embed.rs  lib.rs  mock.rs  retrieve.rs
crates/dochub-auth/src/: handlers.rs  lib.rs  throttle.rs
crates/dochub-authz/: Cargo.toml
crates/dochub-authz/src/: lib.rs  perms.rs  resolve.rs
crates/dochub-authz/tests/: resolve.rs
crates/dochub-bin/src/: main.rs
crates/dochub-core/: Cargo.toml
crates/dochub-core/src/: config.rs  extract.rs  ingest.rs  lib.rs
crates/dochub-db/migrations/: 0022_ai_summaries.sql  0022_projects_acl.sql  0023_backfill_projects.sql  0024_tags.sql  0025_jobs.sql
crates/dochub-db/src/: acl.rs  ai_summaries.rs  audit.rs  embeddings.rs  files.rs  folders.rs  jobs.rs  lib.rs  projects.rs  registry.rs  search.rs  tags.rs  workspaces.rs
crates/dochub-db/tests/: registry.rs  repos.rs
crates/dochub-http/: Cargo.toml
crates/dochub-http/src/: access_log.rs  admin.rs  agent_http.rs  ai.rs  ask.rs  authz.rs  collab.rs  compliance.rs  content_search.rs  csrf.rs  diff.rs  direct_upload.rs  error.rs  files.rs  grants.rs  headers.rs  invitations.rs  lib.rs  mcp_http.rs  members.rs  metrics.rs  pii_http.rs  projects_http.rs  raw.rs  search.rs  semantic_search.rs  share.rs  summary.rs  tokens_http.rs  versions.rs  workspaces.rs
crates/dochub-http/tests/: access_mgmt.rs  activity.rs  admin.rs  ask.rs  audit_export.rs  auth_throttle.rs  byo_storage.rs  collab.rs  compliance.rs  content_search.rs  diff.rs  direct_upload.rs  files.rs  handoff.rs  invitations.rs  metrics.rs  notes.rs  oidc.rs  pii.rs  search.rs  settings.rs  setup.rs  share.rs  summary.rs  tags_http.rs  tokens.rs  two_origin.rs  versions.rs  workspaces.rs
crates/dochub-storage/src/: lib.rs
crates/drive-auth/: Cargo.toml
crates/drive-auth/examples/: hash.rs
crates/drive-auth/src/: error.rs  handlers.rs  lib.rs  router.rs
crates/drive-bin/: Cargo.toml
crates/drive-bin/src/: main.rs
crates/drive-core/: Cargo.toml
crates/drive-core/src/: config.rs  lib.rs
crates/drive-db/src/: audit.rs  files.rs  folders.rs  lib.rs  users.rs
crates/drive-db/tests/: repos.rs
crates/drive-http/: Cargo.toml
crates/drive-http/src/: access_log.rs  activity.rs  admin.rs  direct_upload.rs  files.rs  invitations.rs  lib.rs  search.rs  share.rs  state.rs  thumbs.rs
crates/drive-http/tests/: activity.rs  admin.rs  byo_storage.rs  files.rs  handoff.rs  invitations.rs  notes.rs  search.rs  settings.rs  setup.rs  share.rs  two_origin.rs  workspaces.rs
crates/drive-storage/: Cargo.toml
crates/drive-storage/src/: lib.rs  thumbnails.rs
crates/drive-thumb-worker/src/: main.rs
crates/drive-wopi/: Cargo.toml
crates/drive-wopi/src/: lib.rs
docs/: ARCHITECTURE.md  CAPABILITY-TRACKER.md
docs/design/: 09-share-raw-decryption.md  phase-2-build.md  ui-redesign-v3.md
docs/ops/: RUNBOOK.md
docs/research/: 00-synthesis.md  01-wopi.md  02-auth.md  03-storage.md  04-polish-principles.md  05-rust-stack.md  06-security.md  08-byo-storage.md  10-direct-upload.md  12-oidc.md  15-sandboxed-thumb-worker.md
docs/spikes/: 01-storage.md  02-wopi-host.md  04-two-origin.md
docs/ui-research/: 01-reference-spas.md  02-stack-pick.md  03-sign-in-patterns.md  04-file-table.md  mockup-v1.html  mockup-v2.html
docs/ux/: 01-flows.md  02-surface-v2.md  02-surface.md  04-setup-wizard.md  06-activity-surface.md  07-preview-surface.md  10-sdk-integration-plan.md  12-search-surface.md  14-marketing-surface.md
marketing/: .gitignore  lighthouserc.json  package.json  tsconfig.json
marketing/scripts/: optimize-screenshots.mjs
marketing/src/components/: FeatureGrid.astro  FinalCta.astro  Footer.astro  Hero.astro  Logo.astro  Nav.astro  ScreenshotShowcase.astro
marketing/src/layouts/: Base.astro  DocLayout.astro
marketing/src/pages/: index.astro  roadmap.astro  screenshots.astro  vision.astro
marketing/src/pages/demo/: index.astro
marketing/src/styles/: base.css  fonts.css  tokens.css
spikes/01-storage/: Cargo.toml
spikes/01-storage/src/: lib.rs
spikes/01-storage/tests/: conformance.rs
spikes/02-wopi-host/: Cargo.toml
spikes/02-wopi-host/src/: lib.rs
spikes/02-wopi-host/tests/: edit_cycle.rs
spikes/04-two-origin/: Cargo.toml
spikes/04-two-origin/src/: lib.rs
spikes/04-two-origin/tests/: two_origin.rs
web/: .gitignore  UI-M6-PLAN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/scripts/: copy-embed.mjs
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/api/: client.ts  demo.ts  thumbnail.ts  uploadPolicy.ts
web/src/auth/: AuthContext.tsx
web/src/components/: AmbientGround.tsx  AskPanel.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DemoBanner.tsx  DetailsPanel.tsx  EmptyState.tsx  EntryMenu.tsx  FilePresenceStack.tsx  FileThumb.tsx  FileViewingDot.tsx  Logo.tsx  PreviewModal.tsx  PromptDialog.tsx  RecentSearchesPopover.tsx  RenameDialog.tsx  SelectionBar.tsx  Sidebar.tsx  ThemeToggle.tsx  TopBar.tsx  VersionHistory.tsx
web/src/file-source/: DriveFileSource.ts
web/src/lib/: recentSearches.ts  searchMetrics.ts  searchUrl.ts
web/src/pages/: Activity.tsx  Admin.tsx  FileFullscreen.tsx  Files.tsx  Notes.tsx  Recipient.tsx  Settings.tsx  Setup.tsx  Shell.tsx  SignIn.tsx  VersionHistoryPage.tsx
web/src/state/: PresenceContext.tsx
web/src/styles/: dialog.css  notes.css  tokens.css
web/tests/e2e/: _chrome-gate.spec.ts  _iframe-verify.spec.ts  admin-load-retry.spec.ts  audit-export.spec.ts  command-palette.spec.ts  files-keyboard-nav.spec.ts  files.spec.ts  help-and-bell.spec.ts  marketing-screenshots.mjs  screenshot.mjs  sdk-integration.spec.ts  search-perf.spec.ts  tokens.spec.ts  version-history-load-retry.spec.ts
(+25 files in other folders)
