[package]
name        = "dochub-ai"
description = "Pluggable, read-only, audited AI provider layer for Doc-Hub (Phase 3 §3)"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
