[package]
name        = "drive-auth"
description = "Sessions, share-links, and Argon2id passwords for Casual Drive"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
drive-core      = { path = "../drive-core" }

axum            = { workspace = true }
tokio           = { workspace = true }
tower           = { workspace = true }
tower-sessions  = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
time            = { workspace = true }
argon2          = { workspace = true }
subtle          = { workspace = true }
tracing         = { workspace = true }
