[package]
name        = "drive-core"
description = "Domain types, errors, and IDs for Casual Drive"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
time      = { workspace = true }
ulid      = { workspace = true }
