[package]
name    = "spike-02-wopi-host"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum         = { version = "0.8", features = ["macros"] }
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tower        = "0.5"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
bytes        = "1"
thiserror    = "2"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
time         = { version = "0.3", features = ["serde", "macros"] }

[dev-dependencies]
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util"] }
http-body-util = "0.1"
tower        = { version = "0.5", features = ["util"] }
