[package]
name    = "spike-04-two-origin"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
axum         = "0.8"
tokio        = { version = "1", features = ["macros", "rt-multi-thread"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["set-header"] }
bytes        = "1"
futures      = "0.3"
thiserror    = "2"
anyhow       = "1"
url          = "2"
spike-01-storage = { path = "../01-storage" }

[dev-dependencies]
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
http-body-util = "0.1"
tower        = { version = "0.5", features = ["util"] }
tempfile     = "3"
